# trying_to_make_friends_with_FastAPI

./: LICENSE  README.md  app.py  pyproject.toml
api_v1/: __init__.py
api_v1/employee/: __init__.py  crud.py  dependencies.py  schemas.py  views.py
core/: __init__.py  config.py  database.py
core/models/: __init__.py  base.py  employee.py
migrations/: env.py
migrations/versions/: 2024_03_31_1857-284c44b42501_создаю_таблицу_для_хранения_информации_.py
