[tool.poetry]
name = "trying-to-make-friends-with-fastapi"
version = "0.1.0"
description = "Пробуем подружиться / познать возможности FastAPI"
authors = ["Dmitry-Peskov <dv.peskov@yandex.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = {extras = ["standart"], version = "^0.29.0"}
sqlalchemy = "^2.0.29"
pydantic-settings = "^2.2.1"
pydantic = {extras = ["email"], version = "^2.6.4"}
alembic = "^1.13.1"
aiosqlite = "^0.20.0"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
poetry = "^1.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
